# openduck

./: .gitignore  LICENSE  LIVE2D.md  README.md  RELEASE.md  install.sh  package-lock.json  package.json  sample-female-transcript.txt  sample-male-transcript.txt  start.sh  svelte.config.js
characters/: baron-pitchwell.openduck  camille-cafe.openduck  captain-byte.openduck  chaos-goblin.openduck  coach-ember.openduck  counsel-vega.openduck  detective-noire.openduck  dungeon-master-mira.openduck  echo-interviewer.openduck  haru.openduck  lyra-the-bard.openduck  openduck.openduck  oracle-nia.openduck  professor-loop.openduck
scripts/: debug_dmg_bundle.sh  release.sh  setup_python_env.sh
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json  updater-public-key.pem
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/macos/: icon.icns
src-tauri/resources/: csm_stream.py  hf_download.py  patch_mlx_vlm.py  stt_stream.py  turn_detector.py
src-tauri/src/: apple_translation_helper.swift  constants.rs  frontend_events.rs  lib.rs  main.rs  model_variants.rs  vad.rs
src/lib/components/home/: AboutModal.svelte  AppHeader.svelte  BackgroundModal.svelte  ContactsModal.svelte  ConversationPopup.svelte  ExternalLlmConfigModal.svelte  GemmaBanner.svelte  Live2dAvatar.svelte  OllamaConfigModal.svelte  Onboarding.svelte  SearchModal.svelte  SessionsPopup.svelte  ShortcutCapture.svelte  SpeechBanner.svelte  SttBanner.svelte  SubtitleTranslationLlmConfigModal.svelte  UpdatePromptModal.svelte
src/lib/components/ui/: ConfirmDialog.svelte
src/lib/openduck/: backgrounds.ts  config.ts  contacts.ts  format.ts  model-preferences.ts  types.ts
src/routes/: +page.svelte  home.css
src/routes/overlay/: +page.svelte
static/: audio-processor.js  connecting-sound.m4a  playback-processor.js
