[package]
name = "openduck"
version = "1.0.0"
description = "AI Voice Assistant Desktop App"
authors = ["OpenDuck"]
license = "MIT"
edition = "2021"

[lib]
name = "openduck_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hound = "3.5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
uuid = { version = "1.10", features = ["v4", "serde"] }
keyring = "3"
ort = { version = "=2.0.0-rc.10", features = ["ndarray"] }
ndarray = "0.16"
    objc2-app-kit = "0.3"


[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
